syntax = "proto3";

package product_service;
option go_package = "genproto/product_service";

service ProductService {
    rpc Create(CreateProductRequest) returns (CreateProductResponse) {}
    rpc Get(IdRequest) returns (GetProductResponse) {}
    rpc List(ListProductRequest) returns (ListProductResponse) {}
    rpc Update(UpdateProductRequest) returns (Response) {}
    rpc Delete(IdRequest) returns (Response) {}
}

message CreateProductRequest { 
    string category_id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message Product { 
    string id = 1;  
    string category_id = 2;
    string name = 3;
    string description = 4;
    float price = 5;
    string created_at = 6;
    string updated_at = 7;
}

message CreateProductResponse {
    string id = 1;
}

message GetProductResponse { 
    Product Product = 1;
}

message UpdateProductRequest {
    string id = 1;
    string category_id = 2;
    string name = 3;
    string description = 4;
    float price = 5;
}

message ListProductRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message ListProductResponse {
     repeated Product Productes = 1;
     int32 count = 2;
}

message Response {
    string message = 1;
}

message IdRequest {
    string id = 1;
}
